updated a few things
I was going to release more details about the project (because I realized the name gives it away) but I think I want to hide details  about the implementation for now

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-Documents/What is SkillTracker.docx
-nodeJS/details.mjs
 nodeJS/databaseLogs.log
 nodeJS/server.mjs
+nodeJS/logincreds.mjs
+nodeJS/details.mjs
+Documents/What is SkillTracker.docx
